// P4Testgen Protobuf template.
syntax = "proto3";

package p4testgen;

import "third_party/p4lang_p4runtime/proto/p4/v1/p4runtime.proto";

message TestCase {
  // The raw bytes of the test packet to be injected via `packet_input_port`.
  bytes input_packet = 1;
  // The ingress port at which to inject the `input_packet`.
  bytes packet_input_port = 2;
  // The entities (e.g., table entries) to install on the switch before
  // injecting the `input_packet`.
  repeated p4.v1.Entity entities = 3;
}
